welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: value and is not a member of Boolean
while (estSurBiscuit==true and nbbis<4){
                           ^