welcome.lessons.welcome.variables.RunFour.scala.code
var nbbis:Int=0
while (estSurBiscuit==true and nbbis<4){
nbbis=nbbis+1
avance()}
